<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.owllife.youtubebookmark.presentation.editbookmark.EditBookMarkViewModel"/>

        <variable
            name="bookmarkEntity"
            type="com.owllife.youtubebookmark.domain.entity.BookMarkEntity"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_activity_horizontal_margin"
        android:paddingTop="@dimen/common_activity_horizontal_margin"
        android:paddingEnd="@dimen/common_activity_horizontal_margin">

        <include layout="@layout/toolbar_title_only"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/PrimaryLabelTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_category"/>

                <Spinner
                    android:id="@+id/category_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:minWidth="100dp"
                    android:minHeight="45dp"
                    android:onItemSelected="@{(parent,view,pos,id) -> viewmodel.setSelectedCategory(pos)}"/>

                <TextView
                    style="@style/PrimaryLabelTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_movie_url"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputUrlEt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="3"
                        android:onTextChanged="@{(text, start, before, count) -> viewmodel.onMovieUrlTextChanged()}"
                        android:text="@={viewmodel.movieUrl}"/>

                    <TextView
                        android:id="@+id/check_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/default_background"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@string/sans_serif"
                        android:foreground="@drawable/grey_color_ripple"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:minHeight="35dp"
                        android:onClick="@{() -> viewmodel.handleQueryBtn()}"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/query"
                        android:textColor="@color/primary_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="@{viewmodel.movieData.items != null ? View.VISIBLE : View.GONE, default = gone}">

                    <TextView
                        style="@style/PrimaryLabelTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:minHeight="100dp"
                        bind:thumbnail="@{viewmodel.movieData}"/>

                    <TextView
                        style="@style/SecondaryLabelTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@{viewmodel.movieData.items.get(0).snippet.title}"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/list_item_background"
            android:onClick="@{v -> viewmodel.saveToLocalDb()}"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="@{viewmodel.movieData.items != null ? true : false, default=false}"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/save"
                android:textSize="@dimen/common_big_size_button_text_size"/>

        </LinearLayout>

    </LinearLayout>

</layout>